--- a/docs/world/ores/bauxite.mdx
+++ b/docs/world/ores/bauxite.mdx
@@ -12,9 +12,7 @@ There are no crafting recipe for **Bauxite Ore**. It is generated naturally in T
 
 ## Usage
 
-#### Grinder
-
-\<recipe\> size 1x1 input techreborn:bauxite_ore output techreborn:bauxite_dust,2 tool techreborn:grinder \</recipe\>\
+<Machine recipe="input techreborn:bauxite_ore output techreborn:bauxite_dust,2 tool techreborn:grinder" />
 
 #### Industrial Grinder
 
