fixing just a whole gang of dead links
plus a few missing images/suboptimal names

--- a/docs/blocks/batteries/aesu.mdx
+++ b/docs/blocks/batteries/aesu.mdx
@@ -7,7 +7,7 @@ title: Adjustable SU
 # Adjustable SU
 
 The **Adjustable SU** — *aka **AESU*** — is a battery block that stores energy and charges items.  
-For more details and how to use, read [general information about Batteries](/energy/batteries).
+For more details and how to use, read [general information about Batteries](/docs/blocks/batteries).
 
 | Tier   | Input     | Output        | Storage |
 |--------|-----------|---------------|---------|
