--- a/docs/blocks/batteries/idsu.mdx
+++ b/docs/blocks/batteries/idsu.mdx
@@ -8,7 +8,7 @@ title: Interdimensional SU
 
 The **Interdimensional SU** — *aka **IDSU*** — is a battery block that stores energy and charges items,  
 while wirelessly transferring energy to other IDSUs.  
-For more details and how to use, read [general information about Batteries](/energy/batteries).
+For more details and how to use, read [general information about Batteries](/docs/blocks/batteries).
 
 | Tier   | Input     | Output    | Storage |
 |--------|-----------|-----------|---------|
