--- a/docs/blocks/batteries/lesu_storage.mdx
+++ b/docs/blocks/batteries/lesu_storage.mdx
@@ -6,8 +6,7 @@ title: LESU Storage
 
 # LESU Storage
 
-The **LESU Storage** is a multi-block expansion for the  
-<ItemImage file="lapotronic_su" alt="LESU Controller" size="24" inline={true}/> **[LESU Controller](/energy/batteries/lesu)**.
+The **LESU Storage** is a multi-block expansion for the <McItem slug="techreborn:lesu" overrides={{name:"LESU Controller"}}/>
 
 ## Recipe
 
@@ -17,4 +16,4 @@ The **LESU Storage** is a multi-block expansion for the
 
 Used as an ingredient in the <McItem slug="minecraft:crafting_table" inline={true}/> to produce:
 
-- <ItemImage file="lapotronic_su" alt="LESU Controller" size="24" inline={true}/> **[LESU Controller](/energy/batteries/lesu)**
+- <McItem slug="techreborn:lesu" overrides={{name:"LESU Controller"}}/>
