--- a/docs/blocks/batteries/mfe.mdx
+++ b/docs/blocks/batteries/mfe.mdx
@@ -7,7 +7,7 @@ title: MFE
 # MFE
 
 The **MFE** is a battery block that stores energy and charges items.  
-For more details and how to use, read [general information about Batteries](/energy/batteries).
+For more details and how to use, read [general information about Batteries](/docs/blocks/batteries).
 
 | Tier   | Input     | Output    | Storage |
 |--------|-----------|-----------|---------|
