--- a/docs/blocks/generators/generator.mdx
+++ b/docs/blocks/generators/generator.mdx
@@ -6,7 +6,7 @@ title: Generator
 
 # Generator
 
-The **Generator** is the most basic power generator in the mod and produces energy by burning coal or wood. It will power adjacent blocks or remote blocks using [cables](/energy/cables). It is also used as an ingredient for more advanced machines. It will not consume fuel if there is not enough room to store the produced energy (e.g. It will pause burning the fuel until there is room for another tick worth of energy).
+The **Generator** is the most basic power generator in the mod and produces energy by burning coal or wood. It will power adjacent blocks or remote blocks using [cables](/docs/blocks/cables). It is also used as an ingredient for more advanced machines. It will not consume fuel if there is not enough room to store the produced energy (e.g. It will pause burning the fuel until there is room for another tick worth of energy).
 
 | Tier | Fuel Type   | Output | Storage |
 |------|-------------|--------|---------|
