--- a/docs/items/fluids/fluids.mdx
+++ b/docs/items/fluids/fluids.mdx
@@ -6,7 +6,7 @@ title: Fluids
 <ItemImage file="lava_cell" alt="Fluids" size="200" />
 
 
-**Fluids** are essential part of TechReborn mod. Thay are widely used for powering **[generators](/energy/generators)**, producing other fluids or items.
+**Fluids** are essential part of TechReborn mod. Thay are widely used for powering **[generators](/docs/blocks/generators)**, producing other fluids or items.
 
 
 ### List of fluids
