--- a/docs/blocks/batteries/lesu.mdx
+++ b/docs/blocks/batteries/lesu.mdx
@@ -7,7 +7,7 @@ title: Lapotronic Energy Storage Unit
 # Lapotronic Energy Storage Unit
 
 The **Lapotronic Energy Storage Unit** — *aka **LESU*** — is a battery multi-block that stores energy and charges items.  
-For more details and how to use, read [general information about Batteries](/energy/batteries).
+For more details and how to use, read [general information about Batteries](/docs/blocks/batteries).
 
 | Tier | Input           | Output                  | Storage            |
 |------|------------------|--------------------------|---------------------|
