--- a/docs/blocks/batteries/mfsu.mdx
+++ b/docs/blocks/batteries/mfsu.mdx
@@ -7,7 +7,7 @@ title: MFSU
 # MFSU
 
 The **MFSU** is a battery block that stores energy and charges items.  
-For more details and how to use, read [general information about Batteries](/energy/batteries).
+For more details and how to use, read [general information about Batteries](/docs/blocks/batteries).
 
 | Tier | Input     | Output    | Storage |
 |------|-----------|-----------|---------|
