added machine upgrades section

--- a/docs/blocks/machines/machines.mdx
+++ b/docs/blocks/machines/machines.mdx
@@ -63,4 +63,4 @@ Tech Reborn has several tiers of different kind of machines:
 
 ## Upgrades
 
-*[General information about upgrades](/energy/machines/upgrades)* [upgrades&firstseconly&noheader](/section>/energy/machines/upgrades&firstseconly&noheader)
+*[General information about upgrades](/docs/blocks/machines/upgrades)*
