improving energy guide and linking to it in more places

--- a/docs/blocks/batteries/batteries.mdx
+++ b/docs/blocks/batteries/batteries.mdx
@@ -7,7 +7,7 @@ sidebar_position: 5
 
 ## Battery Blocks
 
-Battery blocks are used to store energy and charge items.
+Battery blocks are used to store energy and charge items. For an explanation of how batteries interact with power, read [general information about energy](/energy/).
 
 - <McItem slug="techreborn:battery_box"/>
 - <McItem slug="techreborn:mfe" overrides={{name:"MFE"}}/>
