--- a/docs/blocks/cables/cables.mdx
+++ b/docs/blocks/cables/cables.mdx
@@ -3,6 +3,8 @@ title: Cables
 sidebar_position: 2
 ---
 
+For an explanation of how cables interact with power, read [general information about energy](/energy/).
+
 ## Cable Tiers
 
 | Name                                                                                                    | Tier     | Input & Output Rate |
