--- a/docs/blocks/miscellaneous/miscellaneous.mdx
+++ b/docs/blocks/miscellaneous/miscellaneous.mdx
@@ -5,13 +5,10 @@ sidebar_position: 10
 
 These blocks don't have a home, so we're putting them here.
 
-- \<mcitem\>techreborn:nuke\</mcitem\>
-- \<mcitem\>techreborn:alarm\</mcitem\>
-- \<mcitem\>techreborn:player_detector\</mcitem\>
-- \<mcitem\>techreborn:drain\</mcitem\>
-- \<mcitem\>techreborn:industrial_chunkloader\</mcitem\>
-- \<mcitem\>techreborn:basin\</mcitem\>
+- <McItem slug="techreborn:nuke"/>
+- <McItem slug="techreborn:alarm"/>
+- <McItem slug="techreborn:player_detector"/>
+- <McItem slug="techreborn:industrial_chunkloader"/>
 - <McItem slug="techreborn:fusion_coil" />
-- \<mcitem\>techreborn:fusion_coil\</mcitem\>
-- \<mcitem\>techreborn:charge_o_mat\</mcitem\>
-- \<mcitem\>techreborn:storage_buffer\</mcitem\>
+- <McItem slug="techreborn:charge_o_mat"/>
+- <McItem slug="techreborn:storage_buffer"/>
