creating stubs for missing fluids and parts

--- a/docs/items/fluids/fluids.mdx
+++ b/docs/items/fluids/fluids.mdx
@@ -19,8 +19,12 @@ title: Fluids
 - <McItem slug="carbon_fiber_cell" pack="techreborn"/>
 - <McItem slug="chlorite_cell" pack="techreborn"/>
 - <McItem slug="compressed_air_cell" pack="techreborn"/>
+- <McItem slug="deuterium_cell" pack="techreborn"/>
 - <McItem slug="diesel_cell" pack="techreborn"/>
 - <McItem slug="electrolyzed_water_cell" pack="techreborn"/>
+- <McItem slug="helium_cell" pack="techreborn"/>
+- <McItem slug="helium3_cell" pack="techreborn"/>
+- <McItem slug="heliumplasma_cell" pack="techreborn"/>
 - <McItem slug="hydrogen_cell" pack="techreborn"/>
 - <McItem slug="lithium_cell" pack="techreborn"/>
 - <McItem slug="methane_cell" pack="techreborn"/>
@@ -33,6 +37,7 @@ title: Fluids
 - <McItem slug="sodium_sulfide_cell" pack="techreborn"/>
 - <McItem slug="sulfur_cell" pack="techreborn"/>
 - <McItem slug="sulfuric_acid_cell" pack="techreborn"/>
+- <McItem slug="tritium_cell" pack="techreborn"/>
 - <McItem slug="water_cell" pack="techreborn"/>
 - <McItem slug="wolframium_cell" pack="techreborn"/>
 
