--- a/docs/items/parts/parts.mdx
+++ b/docs/items/parts/parts.mdx
@@ -34,27 +34,18 @@ Parts are essential components to craft machines.
 - <McItem slug="techreborn:rubber" />
 - <McItem slug="techreborn:sap" />
 
+- <McItem slug="techreborn:60k_helium_coolant_cell" overrides={{name:"Helium Coolant Simple"}}/>
+- <McItem slug="techreborn:180k_helium_coolant_cell" overrides={{name:"Helium Coolant Triple"}}/>
+- <McItem slug="techreborn:360k_helium_coolant_cell" overrides={{name:"Helium Coolant Six"}}/>
 
-```
+- <McItem slug="techreborn:60k_nak_coolant_cell" overrides={{name:"Nak Coolant Simple"}}/>
+- <McItem slug="techreborn:180k_nak_coolant_cell" overrides={{name:"Nak Coolant Triple"}}/>
+- <McItem slug="techreborn:360k_nak_coolant_cell" overrides={{name:"Nak Coolant Six"}}/>
 
+- <McItem slug="techreborn:neutron_reflector" overrides={{name:"Neutron Reflector"}}/>
+- <McItem slug="techreborn:iridium_neutron_reflector" overrides={{name:"Iridium Neutron Reflector"}}/>
+- <McItem slug="techreborn:thick_neutron_reflector" overrides={{name:"Thick Neutron Reflector"}}/>
 
-
-- ![Helium Coolant Simple](/media/mods/techreborn/60k_helium_coolant_cell.png){width="24" query="?nolink&24"} **[Helium Coolant Simple](/items/part/helium_coolant_simple)**
-- ![Helium Coolant Triple](/media/mods/techreborn/180k_helium_coolant_cell.png){width="24" query="?nolink&24"} **[Helium Coolant Triple](/items/part/helium_coolant_triple)**
-- ![Helium Coolant Six](/media/mods/techreborn/360k_helium_coolant_cell.png){width="24" query="?nolink&24"} **[Helium Coolant Six](/items/part/helium_coolant_six)**
-
-- ![Nak Coolant Simple](/media/mods/techreborn/60k_nak_coolant_cell.png){width="24" query="?nolink&24"} **[Nak Coolant Simple](/items/part/nak_coolant_simple)**
-- ![Nak Coolant Triple](/media/mods/techreborn/180k_nak_coolant_cell.png){width="24" query="?nolink&24"} **[Nak Coolant Triple](/items/part/nak_coolant_triple)**
-- ![Nak Coolant Six](/media/mods/techreborn/360k_nak_coolant_cell.png){width="24" query="?nolink&24"} **[Nak Coolant Six](/items/part/nak_coolant_six)**
-
-
-- ![Neutron Reflector](/media/mods/techreborn/neutron_reflector.png){width="24" query="?nolink&24"} **[Neutron Reflector](/items/part/neutron_reflector)**
-- ![Iridium Neutron Reflector](/media/mods/techreborn/iridium_neutron_reflector.png){width="24" query="?nolink&24"} **[Iridium Neutron Reflector](/items/part/iridium_neutron_reflector)**
-- ![Thick Neutron Reflector](/media/mods/techreborn/thick_neutron_reflector.png){width="24" query="?nolink&24"} **[Thick Neutron Reflector](/items/part/thick_neutron_reflector)**
-
-- ![Coolant Simple](/media/mods/techreborn/10k_coolant_cell.png){width="24" query="?nolink&24"} **[Coolant Simple](/items/part/coolant_simple)**
-- ![Coolant Triple](/media/mods/techreborn/30k_coolant_cell.png){width="24" query="?nolink&24"} **[Coolant Triple](/items/part/coolant_triple)**
-- ![Coolant Six](/media/mods/techreborn/60k_coolant_cell.png){width="24" query="?nolink&24"} **[Coolant Six](/items/part/coolant_six)**
-
-
-```
+- <McItem slug="techreborn:10k_coolant_cell" overrides={{name:"Coolant Simple"}}/>
+- <McItem slug="techreborn:30k_coolant_cell" overrides={{name:"Coolant Triple"}}/>
+- <McItem slug="techreborn:60k_coolant_cell" overrides={{name:"Coolant Six"}}/>
