--- a/docs/items/fluids/compressed_air_cell.mdx
+++ b/docs/items/fluids/compressed_air_cell.mdx
@@ -5,4 +5,156 @@ title: Compressed Air Cell
 <ItemImage file="compressed_air_cell" alt="Compressed Air Cell" size="200" />
 
 
-**Fluids** are essential part of TechReborn mod. Thay are widely used for powering generators, producing other fluids or items.
+**Compressed Air Cell** is used in the <McItem slug="techreborn:chemical_reactor" /> and the <McItem slug="techreborn:industrial_electrolyzer" />.
+
+### As An Input
+
+<Machine config={{
+  input: [
+    {id: "techreborn:compressed_air_cell", qty: 1},
+    {id: "techreborn:nitrogen_cell", qty: 1}
+  ],
+  output: [
+    {id: "techreborn:nitrogen_dioxide_cell", qty: 1}
+  ],
+  tool: "techreborn:chemical_reactor"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "techreborn:sodium_sulfide_cell", qty: 1},
+    {id: "techreborn:compressed_air_cell", qty: 1}
+  ],
+  output: [
+    {id: "techreborn:sodium_persulfate_cell", qty: 2}
+  ],
+  tool: "techreborn:chemical_reactor"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "techreborn:compressed_air_cell", qty: 1},
+    {id: "techreborn:hydrogen_cell", qty: 1}
+  ],
+  output: [
+    {id: "techreborn:water_cell", qty: 1}
+  ],
+  tool: "techreborn:chemical_reactor"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "techreborn:sulfuric_acid_cell", qty: 5}
+  ],
+  output: [
+    {id: "techreborn:hydrogen_cell", qty: 2},
+    {id: "techreborn:sulfur_cell", qty: 1},
+    {id: "techreborn:compressed_air_cell", qty: 2}
+  ],
+  tool: "techreborn:industrial_electrolyzer"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "techreborn:sapphire_dust", qty: 8},
+    {id: "techreborn:empty_cell", qty: 3}
+  ],
+  output: [
+    {id: "techreborn:aluminum_dust", qty: 2},
+    {id: "techreborn:compressed_air_cell", qty: 3}
+  ],
+  tool: "techreborn:industrial_electrolyzer"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "minecraft:sand", qty: 16},
+    {id: "techreborn:empty_cell", qty: 2}
+  ],
+  output: [
+    {id: "techreborn:silicon_cell", qty: 1},
+    {id: "techreborn:compressed_air_cell", qty: 1}
+  ],
+  tool: "techreborn:industrial_electrolyzer"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "techreborn:spessartine_dust", qty: 20},
+    {id: "techreborn:empty_cell", qty: 9}
+  ],
+  output: [
+    {id: "techreborn:aluminum_dust", qty: 2},
+    {id: "techreborn:manganese_dust", qty: 3},
+    {id: "techreborn:silicon_cell", qty: 3},
+    {id: "techreborn:compressed_air_cell", qty: 6}
+  ],
+  tool: "techreborn:industrial_electrolyzer"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "techreborn:pyrope_dust", qty: 20},
+    {id: "techreborn:empty_cell", qty: 9}
+  ],
+  output: [
+    {id: "techreborn:magnesium_dust", qty: 3},
+    {id: "techreborn:aluminum_dust", qty: 2},
+    {id: "techreborn:silicon_cell", qty: 3},
+    {id: "techreborn:compressed_air_cell", qty: 6}
+  ],
+  tool: "techreborn:industrial_electrolyzer"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "techreborn:peridot_dust", qty: 9},
+    {id: "techreborn:empty_cell", qty: 3}
+  ],
+  output: [
+    {id: "techreborn:magnesium_dust", qty: 2},
+    {id: "minecraft:raw_Iron", qty: 2},
+    {id: "techreborn:silicon_cell", qty: 1},
+    {id: "techreborn:compressed_air_cell", qty: 2}
+  ],
+  tool: "techreborn:industrial_electrolyzer"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "techreborn:obsidian_dust", qty: 4},
+    {id: "techreborn:empty_cell", qty: 3}
+  ],
+  output: [
+    {id: "techreborn:small_pile_of_magnesium_dust", qty: 2},
+    {id: "techreborn:iron_nugget", qty: 5},
+    {id: "techreborn:silicon_cell", qty: 1},
+    {id: "techreborn:compressed_air_cell", qty: 2}
+  ],
+  tool: "techreborn:industrial_electrolyzer"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "techreborn:emerald_dust", qty: 29},
+    {id: "techreborn:empty_cell", qty: 16}
+  ],
+  output: [
+    {id: "techreborn:aluminum_dust", qty: 2},
+    {id: "techreborn:beryllium_cell", qty: 3},
+    {id: "techreborn:silicon_cell", qty: 6},
+    {id: "techreborn:compressed_air_cell", qty: 7}
+  ],
+  tool: "techreborn:industrial_electrolyzer"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "techreborn:electrolyzed_water_cell", qty: 5}
+  ],
+  output: [
+    {id: "techreborn:hydrogen_cell", qty: 4},
+    {id: "techreborn:compressed_air_cell", qty: 1}
+  ],
+  tool: "techreborn:industrial_electrolyzer"
+}} />
