--- a/docs/items/fluids/fluids.mdx
+++ b/docs/items/fluids/fluids.mdx
@@ -22,6 +22,7 @@ title: Fluids
 - <McItem slug="deuterium_cell" pack="techreborn"/>
 - <McItem slug="diesel_cell" pack="techreborn"/>
 - <McItem slug="electrolyzed_water_cell" pack="techreborn"/>
+- <McItem slug="glyceryl_cell" pack="techreborn"/>
 - <McItem slug="helium_cell" pack="techreborn"/>
 - <McItem slug="helium3_cell" pack="techreborn"/>
 - <McItem slug="heliumplasma_cell" pack="techreborn"/>
@@ -31,6 +32,11 @@ title: Fluids
 - <McItem slug="mercury_cell" pack="techreborn"/>
 - <McItem slug="nitrocarbon_cell" pack="techreborn"/>
 - <McItem slug="nitrodiesel_cell" pack="techreborn"/>
+- <McItem slug="nitrofuel_cell" pack="techreborn"/>
+- <McItem slug="nitrogen_cell" pack="techreborn"/>
+- <McItem slug="nitrogen_dioxide_cell" pack="techreborn"/>
+- <McItem slug="oil_cell" pack="techreborn"/>
+- <McItem slug="potassium_cell" pack="techreborn"/>
 - <McItem slug="silicon_cell" pack="techreborn"/>
 - <McItem slug="sodium_cell" pack="techreborn"/>
 - <McItem slug="sodiumpersulfate_cell" pack="techreborn"/>
