--- a/docs/items/fluids/silicon_cell.mdx
+++ b/docs/items/fluids/silicon_cell.mdx
@@ -4,5 +4,144 @@ title: Silicon Cell
 
 <ItemImage file="silicon_cell" alt="Silicon Cell" size="200" />
 
+**Silicon Cell** is produced in the <McItem slug="techreborn:industrial_electrolyzer" />.
 
-**Fluids** are essential part of TechReborn mod. Thay are widely used for powering generators, producing other fluids or items.
+### As An Output
+
+<Machine config={{
+  input: [
+    {id: "techreborn:uvarovite_dust", qty: 20},
+    {id: "techreborn:empty_cell", qty: 12}
+  ],
+  output: [
+    {id: "techreborn:calcium_cell", qty: 3},
+    {id: "techreborn:chrome_dust", qty: 2},
+    {id: "techreborn:silicon_cell", qty: 3},
+    {id: "techreborn:compressed_air_cell", qty: 6}
+  ],
+  tool: "techreborn:industrial_electrolyzer"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "techreborn:spessartine_dust", qty: 20},
+    {id: "techreborn:empty_cell", qty: 9}
+  ],
+  output: [
+    {id: "techreborn:aluminum_dust", qty: 2},
+    {id: "techreborn:manganese_dust", qty: 3},
+    {id: "techreborn:silicon_cell", qty: 3},
+    {id: "techreborn:compressed_air_cell", qty: 6}
+  ],
+  tool: "techreborn:industrial_electrolyzer"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "techreborn:sodalite_dust", qty: 23},
+    {id: "techreborn:empty_cell", qty: 8}
+  ],
+  output: [
+    {id: "techreborn:sodium_cell", qty: 4},
+    {id: "techreborn:aluminum_dust", qty: 3},
+    {id: "techreborn:silicon_cell", qty: 3},
+    {id: "techreborn:chlorite_cell", qty: 1}
+  ],
+  tool: "techreborn:industrial_electrolyzer"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "minecraft:sand", qty: 16},
+    {id: "techreborn:empty_cell", qty: 2}
+  ],
+  output: [
+    {id: "techreborn:silicon_cell", qty: 1},
+    {id: "techreborn:compressed_air_cell", qty: 1}
+  ],
+  tool: "techreborn:industrial_electrolyzer"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "techreborn:pyrope_dust", qty: 20},
+    {id: "techreborn:empty_cell", qty: 9}
+  ],
+  output: [
+    {id: "techreborn:magnesium_dust", qty: 3},
+    {id: "techreborn:aluminum_dust", qty: 2},
+    {id: "techreborn:silicon_cell", qty: 3},
+    {id: "techreborn:compressed_air_cell", qty: 6}
+  ],
+  tool: "techreborn:industrial_electrolyzer"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "techreborn:peridot_dust", qty: 9},
+    {id: "techreborn:empty_cell", qty: 3}
+  ],
+  output: [
+    {id: "techreborn:magnesium_dust", qty: 2},
+    {id: "minecraft:raw_Iron", qty: 2},
+    {id: "techreborn:silicon_cell", qty: 1},
+    {id: "techreborn:compressed_air_cell", qty: 2}
+  ],
+  tool: "techreborn:industrial_electrolyzer"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "techreborn:obsidian_dust", qty: 4},
+    {id: "techreborn:empty_cell", qty: 3}
+  ],
+  output: [
+    {id: "techreborn:small_pile_of_magnesium_dust", qty: 2},
+    {id: "techreborn:iron_nugget", qty: 5},
+    {id: "techreborn:silicon_cell", qty: 1},
+    {id: "techreborn:compressed_air_cell", qty: 2}
+  ],
+  tool: "techreborn:industrial_electrolyzer"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "techreborn:emerald_dust", qty: 29},
+    {id: "techreborn:empty_cell", qty: 16}
+  ],
+  output: [
+    {id: "techreborn:aluminum_dust", qty: 2},
+    {id: "techreborn:beryllium_cell", qty: 3},
+    {id: "techreborn:silicon_cell", qty: 6},
+    {id: "techreborn:compressed_air_cell", qty: 7}
+  ],
+  tool: "techreborn:industrial_electrolyzer"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "techreborn:andradite_dust", qty: 20},
+    {id: "techreborn:empty_cell", qty: 12}
+  ],
+  output: [
+    {id: "techreborn:calcium_cell", qty: 3},
+    {id: "minecraft:raw_Iron", qty: 2},
+    {id: "techreborn:silicon_cell", qty: 3},
+    {id: "techreborn:compressed_air_cell", qty: 6}
+  ],
+  tool: "techreborn:industrial_electrolyzer"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "techreborn:almandine_dust", qty: 20},
+    {id: "techreborn:empty_cell", qty: 9}
+  ],
+  output: [
+    {id: "minecraft:raw_iron", qty: 3},
+    {id: "techreborn:aluminum_dust", qty: 2},
+    {id: "techreborn:silicon_cell", qty: 3},
+    {id: "techreborn:compressed_air_cell", qty: 6}
+  ],
+  tool: "techreborn:industrial_electrolyzer"
+}} />
