--- a/docs/items/fluids/carbon_cell.mdx
+++ b/docs/items/fluids/carbon_cell.mdx
@@ -5,4 +5,110 @@ title: Carbon Cell
 <ItemImage file="carbon_cell" alt="Carbon Cell" size="200" />
 
 
-**Fluids** are essential part of TechReborn mod. Thay are widely used for powering generators, producing other fluids or items.
+**Carbon Cell** is used in the <McItem slug="techreborn:chemical_reactor" /> and the <McItem slug="techreborn:industrial_electrolyzer" />.
+
+### As An Input
+
+<Machine config={{
+  input: [
+    {id: "techreborn:carbon_cell", qty: 1},
+    {id: "techreborn:calcium_cell", qty: 1}
+  ],
+  output: [
+    {id: "techreborn:calcium_carbonate_cell", qty: 2}
+  ],
+  tool: "techreborn:chemical_reactor"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "techreborn:carbon_cell", qty: 1},
+    {id: "techreborn:hydrogen_cell", qty: 4}
+  ],
+  output: [
+    {id: "techreborn:methane_cell", qty: 5}
+  ],
+  tool: "techreborn:chemical_reactor"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "techreborn:carbon_cell", qty: 1},
+    {id: "techreborn:nitrogen_cell", qty: 1}
+  ],
+  output: [
+    {id: "techreborn:nitro_carbon_cell", qty: 2}
+  ],
+  tool: "techreborn:chemical_reactor"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "techreborn:glyceryl_cell", qty: 1},
+    {id: "techreborn:carbon_cell", qty: 1}
+  ],
+  output: [
+    {id: "techreborn:nitrocoal_fuel_cell", qty: 5}
+  ],
+  tool: "techreborn:chemical_reactor"
+}} />
+
+### As An Output
+
+<Machine config={{
+  input: [
+    {id: "minecraft:sugar", qty: 32},
+    {id: "techreborn:empty_cell", qty: 7}
+  ],
+  output: [
+    {id: "techreborn:carbon_cell", qty: 2},
+    {id: "techreborn:water_cell", qty: 5}
+  ],
+  tool: "techreborn:industrial_electrolyzer"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "techreborn:methane_cell", qty: 5}
+  ],
+  output: [
+    {id: "techreborn:hydrogen_cell", qty: 4},
+    {id: "techreborn:carbon_cell", qty: 1}
+  ],
+  tool: "techreborn:industrial_electrolyzer"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "techreborn:coal_dust", qty: 1},
+    {id: "techreborn:empty_cell", qty: 2}
+  ],
+  output: [
+    {id: "techreborn:carbon_cell", qty: 2}
+  ],
+  tool: "techreborn:industrial_electrolyzer"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "techreborn:charcoal_dust", qty: 1},
+    {id: "techreborn:empty_cell", qty: 1}
+  ],
+  output: [
+    {id: "techreborn:carbon_cell", qty: 1}
+  ],
+  tool: "techreborn:industrial_electrolyzer"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "techreborn:calcite_dust", qty: 10},
+    {id: "techreborn:empty_cell", qty: 7}
+  ],
+  output: [
+    {id: "techreborn:calcium_cell", qty: 2},
+    {id: "techreborn:carbon_cell", qty: 2},
+    {id: "techreborn:compressed_air_cell", qty: 3}
+  ],
+  tool: "techreborn:industrial_electrolyzer"
+}} />
