--- a/docs/items/fluids/diesel_cell.mdx
+++ b/docs/items/fluids/diesel_cell.mdx
@@ -14,5 +14,15 @@ The **Diesel Cell** is a fluid cell added by Tech Reborn. It is used to produce 
 
 <McItem slug="techreborn:diesel_cell" /> is used to generate energy. 1 cell or bucket will generate 128k Energy in <McItem slug="techreborn:diesel_generator" />.
 
-It is also used for further processing in <McItem slug="techreborn:chemical_reactor" /> recipe:
-<Machine config={{input: [{id: "techreborn:diesel_cell"}, {id: "techreborn:glyceryl_cell"}], output: [{id: "techreborn:nitrodiesel_cell", qty: 5}], tool: "techreborn:chemical_reactor"}} />
+### As An Input
+
+<Machine config={{
+  input: [
+    {id: "techreborn:glyceryl_cell", qty: 1},
+    {id: "techreborn:diesel_cell", qty: 1}
+  ],
+  output: [
+    {id: "techreborn:nitro_diesel_cell", qty: 5}
+  ],
+  tool: "techreborn:chemical_reactor"
+}} />
