--- a/docs/items/fluids/nitrocarbon_cell.mdx
+++ b/docs/items/fluids/nitrocarbon_cell.mdx
@@ -5,4 +5,30 @@ title: Nitrocarbon Cell
 <ItemImage file="nitrocarbon_cell" alt="Nitrocarbon Cell" size="200" />
 
 
-**Fluids** are essential part of TechReborn mod. Thay are widely used for powering generators, producing other fluids or items.
+**Nitro Carbon Cell** is used in the <McItem slug="techreborn:chemical_reactor" />.
+
+### As An Input
+
+<Machine config={{
+  input: [
+    {id: "techreborn:nitrocarbon_cell", qty: 1},
+    {id: "techreborn:water_cell", qty: 1}
+  ],
+  output: [
+    {id: "techreborn:glyceryl_cell", qty: 2}
+  ],
+  tool: "techreborn:chemical_reactor"
+}} />
+
+### As An Output
+
+<Machine config={{
+  input: [
+    {id: "techreborn:carbon_cell", qty: 1},
+    {id: "techreborn:nitrogen_cell", qty: 1}
+  ],
+  output: [
+    {id: "techreborn:nitrocarbon_cell", qty: 2}
+  ],
+  tool: "techreborn:chemical_reactor"
+}} />
