--- a/docs/items/fluids/nitrodiesel_cell.mdx
+++ b/docs/items/fluids/nitrodiesel_cell.mdx
@@ -6,10 +6,19 @@ title: Nitrodiesel Cell
 
 The **Nitro Diesel Cell** is a fluid cell added by Tech Reborn. It is used to generate energy in <McItem slug="techreborn:diesel_generator" />.
 
-## Recipe
-
-<Machine config={{input: [{id: "techreborn:diesel_cell"}, {id: "techreborn:glyceryl_cell"}], output: [{id: "techreborn:nitrodiesel_cell", qty: 5}], tool: "techreborn:chemical_reactor"}} />
-
 ## Usage
 
 <McItem slug="techreborn:nitrodiesel_cell" /> is used to generate energy. 1 cell or bucket will generate 400k Energy in <McItem slug="techreborn:diesel_generator" />.
+
+### As An Output
+
+<Machine config={{
+  input: [
+    {id: "techreborn:glyceryl_cell", qty: 1},
+    {id: "techreborn:diesel_cell", qty: 1}
+  ],
+  output: [
+    {id: "techreborn:nitro_diesel_cell", qty: 5}
+  ],
+  tool: "techreborn:chemical_reactor"
+}} />
