--- a/docs/items/fluids/sodiumpersulfate_cell.mdx
+++ b/docs/items/fluids/sodiumpersulfate_cell.mdx
@@ -5,4 +5,17 @@ title: Sodiumpersulfate Cell
 <ItemImage file="sodiumpersulfate_cell" alt="Sodiumpersulfate Cell" size="200" />
 
 
-**Fluids** are essential part of TechReborn mod. Thay are widely used for powering generators, producing other fluids or items.
+**Sodium Persulfate Cell** is produced in the <McItem slug="techreborn:chemical_reactor" />.
+
+### As An Output
+
+<Machine config={{
+  input: [
+    {id: "techreborn:sodium_sulfide_cell", qty: 1},
+    {id: "techreborn:compressed_air_cell", qty: 1}
+  ],
+  output: [
+    {id: "techreborn:sodiumpersulfate_cell", qty: 2}
+  ],
+  tool: "techreborn:chemical_reactor"
+}} />
