--- a/docs/items/fluids/sulfur_cell.mdx
+++ b/docs/items/fluids/sulfur_cell.mdx
@@ -4,5 +4,42 @@ title: Sulfur Cell
 
 <ItemImage file="sulfur_cell" alt="Sulfur Cell" size="200" />
 
+**Sulfur Cell** is used in the <McItem slug="techreborn:chemical_reactor" /> and produced in the <McItem slug="techreborn:industrial_electrolyzer" />.
 
-**Fluids** are essential part of TechReborn mod. Thay are widely used for powering generators, producing other fluids or items.
+### As An Input
+
+<Machine config={{
+  input: [
+    {id: "techreborn:sulfur_cell", qty: 1},
+    {id: "techreborn:sodium_cell", qty: 1}
+  ],
+  output: [
+    {id: "techreborn:sodium_sulfide_cell", qty: 2}
+  ],
+  tool: "techreborn:chemical_reactor"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "techreborn:sulfur_cell", qty: 1},
+    {id: "techreborn:water_cell", qty: 1}
+  ],
+  output: [
+    {id: "techreborn:sulfuric_acid_cell", qty: 3}
+  ],
+  tool: "techreborn:chemical_reactor"
+}} />
+
+### As An Output
+
+<Machine config={{
+  input: [
+    {id: "techreborn:sulfuric_acid_cell", qty: 5}
+  ],
+  output: [
+    {id: "techreborn:hydrogen_cell", qty: 2},
+    {id: "techreborn:sulfur_cell", qty: 1},
+    {id: "techreborn:compressed_air_cell", qty: 2}
+  ],
+  tool: "techreborn:industrial_electrolyzer"
+}} />
