--- a/docs/items/fluids/chlorite_cell.mdx
+++ b/docs/items/fluids/chlorite_cell.mdx
@@ -5,4 +5,34 @@ title: Chlorite Cell
 <ItemImage file="chlorite_cell" alt="Chlorite Cell" size="200" />
 
 
-**Fluids** are essential part of TechReborn mod. Thay are widely used for powering generators, producing other fluids or items.
+**Chlorite Cell** is produced in the <McItem slug="techreborn:industrial_electrolyzer" />.
+
+### As An Output
+
+<Machine config={{
+  input: [
+    {id: "techreborn:sodalite_dust", qty: 23},
+    {id: "techreborn:empty_cell", qty: 8}
+  ],
+  output: [
+    {id: "techreborn:sodium_cell", qty: 4},
+    {id: "techreborn:aluminum_dust", qty: 3},
+    {id: "techreborn:silicon_cell", qty: 3},
+    {id: "techreborn:chlorite_cell", qty: 1}
+  ],
+  tool: "techreborn:industrial_electrolyzer"
+}} />
+
+<Machine config={{
+  input: [
+    {id: "techreborn:ender_pearl_dust", qty: 16},
+    {id: "techreborn:empty_cell", qty: 16}
+  ],
+  output: [
+    {id: "techreborn:nitrogen_cell", qty: 5},
+    {id: "techreborn:beryllium_cell", qty: 1},
+    {id: "techreborn:potassium_cell", qty: 4},
+    {id: "techreborn:chlorite_cell", qty: 6}
+  ],
+  tool: "techreborn:industrial_electrolyzer"
+}} />
