--- a/docs/blocks/machines/industrial_electrolyzer.mdx
+++ b/docs/blocks/machines/industrial_electrolyzer.mdx
@@ -47,7 +47,7 @@ title: Industrial Electrolyzer
 | 2x<McItem slug="techreborn:cinnabar_dust"/> + <McItem slug="techreborn:empty_cell"/>           | <McItem slug="techreborn:mercury_cell"/> + <McItem slug="techreborn:sulfur_dust"/>                                                                                                                        |
 | <McItem slug="techreborn:charcoal_dust"/> + <McItem slug="techreborn:empty_cell"/>             | <McItem slug="techreborn:carbon_cell"/>                                                                                                                                                                   |
 | 10x<McItem slug="techreborn:calcite_dust"/> + 7x<McItem slug="techreborn:empty_cell"/>         | 2x<McItem slug="techreborn:calcium_cell"/> + 2x<McItem slug="techreborn:carbon_cell"/> + 3x<McItem slug="techreborn:compressed_air_cell"/>                                                                |
-| 3x <McItem slug="minecraft:bonemeal"/> + <McItem slug="techreborn:empty_cell"/>                | <McItem slug="techreborn:calcium_cell"/>                                                                                                                                                                  |
+| 3x <McItem slug="minecraft:bone_meal"/> + <McItem slug="techreborn:empty_cell"/>                | <McItem slug="techreborn:calcium_cell"/>                                                                                                                                                                  |
 | 4x<McItem slug="minecraft:blaze_powder"/>                                                      | <McItem slug="techreborn:dark_ashes"/> + <McItem slug="techreborn:sulfur_dust"/>                                                                                                                          |
 | 12x<McItem slug="techreborn:bauxite_dust"/> + 8x<McItem slug="techreborn:empty_cell"/>         | 8x<McItem slug="techreborn:aluminum_dust"/> + 2x<McItem slug="techreborn:small_pile_of_titanium_dust"/> + 5x<McItem slug="techreborn:hydrogen_cell"/> + 3x<McItem slug="techreborn:compressed_air_cell"/> |
 | 2x<McItem slug="techreborn:ashes"/> + <McItem slug="techreborn:empty_cell"/>                   | <McItem slug="techreborn:carbon_fiber_cell"/>                                                                                                                                                             |
