--- a/docs/items/fluids/calcium_cell.mdx
+++ b/docs/items/fluids/calcium_cell.mdx
@@ -65,7 +65,7 @@ title: Calcium Cell
 
 <Machine config={{
   input: [
-    {id: "minecraft:bonemeal", qty: 3},
+    {id: "minecraft:bone_meal", qty: 3},
     {id: "techreborn:empty_cell", qty: 1}
   ],
   output: [
