--- a/docs/items/fluids/tritium_cell.mdx
+++ b/docs/items/fluids/tritium_cell.mdx
@@ -4,5 +4,16 @@ title: Tritium Cell
 
 <ItemImage file="tritium_cell" alt="Tritium Cell" size="200" />
 
+**Tritium Cell** is produced in the <McItem slug="techreborn:industrial_centrifuge" />.
 
-**Fluids** are essential part of TechReborn mod. Thay are widely used for powering generators, producing other fluids or items.
+### As An Output
+
+<Machine config={{
+  input: [
+    {id: "techreborn:deuterium_cell", qty: 4}
+  ],
+  output: [
+    {id: "techreborn:tritium_cell", qty: 3}
+  ],
+  tool: "techreborn:industrial_centrifuge"
+}} />
